# crm

./: Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  main.rs
crm-metadata/src/abi/: metadata.rs  mod.rs
crm-metadata/tests/: service_test.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: mod.rs  send.rs  sender.rs
crm-send/src/pb/: send.rs
crm-send/tests/: service_test.rs
crm/examples/: ed.rs  tlv.rs
crm/fixtures/: cert.pem  key.pem  rootCA.pem
crm/src/: client.rs  config.rs  lib.rs  main.rs  server.rs
crm/src/abi/: build_query.rs  crm.rs  mod.rs  user.rs
crm/src/pb/: crm.rs
protos/crm/: message.proto  rpc.proto  user.proto
protos/metadata/: rpc.proto
protos/send/: message.proto  rpc.proto
protos/user-stat/: message.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
user-stat/clickhouse/: init.sql
user-stat/examples/: async_stream.rs  gen_data.rs  gen_data_clickhouse.rs  sqlx.rs  sqlx_2.rs
user-stat/src/: app_state.rs  config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs  user_stat.rs
user-stat/src/pb/: mod.rs  user_stat.rs
user-stat/tests/: service-test.rs
