[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"

[workspace.dependencies]
rand = "0.8.5"
dotenv = "0.15.0"
anyhow = "1.0.86"
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_yaml = "0.9.34"
derive_builder = "0.20.0"
tokio-stream = "0.1.15"
itertools = "0.13.0"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }

crm-send = { path = "crm-send" }
crm-metadata = { path = "crm-metadata" }
user-stat = { path = "user-stat" }
