[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
derive_builder = { workspace = true }
tokio-stream = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono", "time"] }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
