[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = []


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
derive_builder = { workspace = true }
tokio-stream = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono", "time"] }
uuid = { version = "1.9.1", features = ["v4"] }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
tonic-mock = "0.3.0"
crm-send = { workspace = true, features = ["test_utils"] }
