[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
rand = "0.8.5"

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
clickhouse = { version = "0.11.6", features = ["time"] }
fake = { version = "2.9.2", features = ["derive", "chrono", "time"] }
nanoid = "0.4.0"
serde_repr = "0.1.19"
time = "0.3.36"
