[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
derive_builder = { workspace = true }
tokio-stream = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
proto-builder-trait = "0.6.1"


[dev-dependencies]
clickhouse = { version = "0.11.6", features = ["time"] }
fake = { version = "2.9.2", features = ["derive", "chrono", "time"] }
nanoid = "0.4.0"
serde_repr = "0.1.19"
time = "0.3.36"
